--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,9 +3,14 @@
   "version": "0.0.0",
   "exports": {},
   "description": "`git log` source for `ddu.vim`",
+  "fmt": { "include": ["denops/**/*.ts", "deno.jsonc"] },
+  "lint": { "include": ["denops/**/*.ts", "deno.jsonc"] },
+  "test": { "include": ["denops/**/*.ts", "deno.jsonc"] },
   "tasks": {
-    "test": "deno test --allow-env=DENOPS_TEST_CONNECT_TIMEOUT,DENOPS_TEST_DENOPS_PATH,DENOPS_TEST_VERBOSE,DENOPS_TEST_VIM_EXECUTABLE,DENOPS_TEST_NVIM_EXECUTABLE --allow-run=vim,nvim --allow-net=127.0.0.1:0 --allow-read",
-    "check": "deno check ./**/*.ts",
-    "lint": "deno lint ./**/*.ts"
+    "update": "deno run --allow-env --allow-read --allow-write --allow-net --allow-run=git,deno jsr:@molt/cli --write ./denops/**/*.ts",
+    "fmt": "deno fmt",
+    "check": "deno check ./denops/**/*.ts",
+    "lint": "deno lint",
+    "test": "deno test --check --permit-no-files --allow-env=DENOPS_TEST_CONNECT_TIMEOUT,DENOPS_TEST_DENOPS_PATH,DENOPS_TEST_VERBOSE,DENOPS_TEST_VIM_EXECUTABLE,DENOPS_TEST_NVIM_EXECUTABLE --allow-run=vim,nvim --allow-net=127.0.0.1:0 --allow-read"
   }
 }
