--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,7 +5,7 @@
   "description": "`git log` source for `ddu.vim`",
   "fmt": { "include": ["denops/**/*.ts", "deno.jsonc"] },
   "lint": { "include": ["denops/**/*.ts", "deno.jsonc"] },
-  "test": { "include": ["denops/**/*.ts", "deno.jsonc"] },
+  "test": { "include": ["denops/**/*_test.ts", "deno.jsonc"] },
   "tasks": {
     "update": "deno run --allow-env --allow-read --allow-write --allow-net --allow-run=git,deno jsr:@molt/cli --write ./denops/**/*.ts",
     "fmt": "deno fmt",
