--- a/deno.jsonc
+++ b/deno.jsonc
@@ -12,5 +12,19 @@
     "check": "deno check ./denops/**/*.ts",
     "lint": "deno lint",
     "test": "deno test --check --permit-no-files --allow-env=DENOPS_TEST_CONNECT_TIMEOUT,DENOPS_TEST_DENOPS_PATH,DENOPS_TEST_VERBOSE,DENOPS_TEST_VIM_EXECUTABLE,DENOPS_TEST_NVIM_EXECUTABLE,MSGPACKR_NATIVE_ACCELERATION_DISABLED --allow-run=vim,nvim --allow-net=127.0.0.1:0 --allow-read"
+  },
+  "workspace": [
+    "./denops/@ddu-sources",
+    "./denops/@ddu-kinds"
+  ],
+  "imports": {
+    "@core/unknownutil": "jsr:@core/unknownutil@^4.3.0",
+    "@denops/std": "jsr:@denops/std@^8.2.0",
+    "@denops/test": "jsr:@denops/test@^4.0.0",
+    "@hibiki/chunked-stream": "jsr:@hibiki/chunked-stream@^0.1.4",
+    "@kyoh86/denops-util": "jsr:@kyoh86/denops-util@^0.1.2",
+    "@shougo/ddu-vim": "jsr:@shougo/ddu-vim@^11.1.0",
+    "@std/assert": "jsr:@std/assert@^1.0.16",
+    "@std/streams": "jsr:@std/streams@^1.0.14"
   }
 }
