fix: remove deno.jsonc from test targets

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,7 +5,7 @@
   "description": "`git log` source for `ddu.vim`",
   "fmt": { "include": ["denops/**/*.ts", "deno.jsonc"] },
   "lint": { "include": ["denops/**/*.ts", "deno.jsonc"] },
-  "test": { "include": ["denops/**/*_test.ts", "deno.jsonc"] },
+  "test": { "include": ["denops/**/*_test.ts"] },
   "tasks": {
     "update": "deno outdated --update",
     "fmt": "deno fmt",
