--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,16 +1,15 @@
+// $schema: https://raw.githubusercontent.com/denoland/deno/refs/heads/main/cli/schemas/config-file.v1.json
 {
   "name": "@kyoh86/ddu-source-git_log",
   "version": "0.0.0",
-  "exports": {},
   "description": "`git log` source for `ddu.vim`",
-  "fmt": { "include": ["denops/**/*.ts", "deno.jsonc"] },
-  "lint": { "include": ["denops/**/*.ts", "deno.jsonc"] },
-  "test": { "include": ["denops/**/*_test.ts"] },
+  "exports": {},
+  "lock": false,
+  "fmt": { "include": ["./**/*.ts", "deno.jsonc"] },
+  "lint": { "include": ["./**/*.ts", "deno.jsonc"] },
+  "test": { "include": ["./**/*_test.ts"] },
   "tasks": {
     "update": "deno outdated --update",
-    "fmt": "deno fmt",
-    "check": "deno check ./denops/**/*.ts",
-    "lint": "deno lint",
     "test": "deno test --check --permit-no-files --allow-env=DENOPS_TEST_CONNECT_TIMEOUT,DENOPS_TEST_DENOPS_PATH,DENOPS_TEST_VERBOSE,DENOPS_TEST_VIM_EXECUTABLE,DENOPS_TEST_NVIM_EXECUTABLE,MSGPACKR_NATIVE_ACCELERATION_DISABLED --allow-run=vim,nvim --allow-net=127.0.0.1:0 --allow-read"
   },
   "workspace": [
@@ -18,13 +17,7 @@
     "./denops/@ddu-kinds"
   ],
   "imports": {
-    "@core/unknownutil": "jsr:@core/unknownutil@^4.3.0",
-    "@denops/std": "jsr:@denops/std@^8.2.0",
     "@denops/test": "jsr:@denops/test@^4.0.0",
-    "@hibiki/chunked-stream": "jsr:@hibiki/chunked-stream@^0.1.4",
-    "@kyoh86/denops-util": "jsr:@kyoh86/denops-util@^0.1.2",
-    "@shougo/ddu-vim": "jsr:@shougo/ddu-vim@^11.1.0",
-    "@std/assert": "jsr:@std/assert@^1.0.16",
-    "@std/streams": "jsr:@std/streams@^1.0.16"
+    "@std/assert": "jsr:@std/assert@^1.0.16"
   }
 }
